--- a/style.css
+++ b/style.css
@@ -1,1 +1,125 @@
-/*# sourceMappingURL=style.css.map */
+/* reset */
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* variables */
+/* general styling */
+body {
+  background-repeat: no-repeat;
+  background-image: url(assets/images/background-pattern-mobile.svg);
+  background-size: 100%;
+  background-color: hsl(275, 100%, 97%);
+}
+
+@media (min-width: 375px) {
+  body {
+    background-image: url(assets/images/background-pattern-desktop.svg);
+  }
+}
+/* card */
+.card {
+  background-color: hsl(0, 0%, 100%);
+  padding: 20px 30px;
+  border-radius: 20px;
+  width: 90%;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  margin-inline: auto;
+  margin-block: 100px;
+}
+.card__container.active .card__container-headingButton {
+  background-image: url(assets/images/icon-minus.svg);
+}
+.card h1 {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 10px;
+  font-size: 1.2rem;
+}
+.card :is(h1, h5) {
+  color: hsl(292, 42%, 14%);
+}
+.card span {
+  display: inline-block;
+}
+.card .card-star {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background-image: url(assets/images/icon-star.svg);
+  background-size: 20px;
+}
+.card__container {
+  padding-block: 10px;
+}
+.card__container-information {
+  font-size: 10px;
+  padding-block: 15px;
+}
+.card__container-heading {
+  font-size: 13px;
+  display: grid;
+  grid-template-columns: 1fr 20px;
+  gap: 30px;
+  align-items: center;
+}
+.card__container-headingText {
+  color: rebeccapurple;
+}
+.card__container-headingButton {
+  width: 100%;
+  height: 20px;
+  background-image: url(assets/images/icon-plus.svg);
+  background-size: 100%;
+}
+.card__container-heading:hover {
+  cursor: pointer;
+}
+
+@media (min-width: 375px) {
+  .card {
+    padding: 30px 40px;
+    width: 45%;
+  }
+  .card h1 {
+    margin-bottom: 25px;
+    font-size: 2rem;
+  }
+  .card span {
+    display: inline-block;
+  }
+  .card__container {
+    padding-block: 20px;
+  }
+  .card__container-information {
+    font-size: 1rem;
+  }
+  .card__container-heading {
+    font-size: 20px;
+    grid-template-columns: 1fr 32px;
+  }
+  .card__container-headingButton {
+    height: 32px;
+  }
+}
+@media (max-width: 975px) {
+  .card {
+    width: 55%;
+  }
+  .card__container-information {
+    font-size: 13px;
+  }
+  .card__container-heading {
+    font-size: 16px;
+  }
+}
+@media (max-width: 750px) {
+  .card {
+    width: 65%;
+  }
+}/*# sourceMappingURL=style.css.map */
